# telestrator

./: Cargo.toml  README.md  _build.rs  build.rs  setup-env.bat  what.html
client/: .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
ippi_sys/: .gitignore  Cargo.toml  README.md  build.rs
nvidia_sys/: .gitignore  Cargo.toml  README.md  build.rs
nvidia_sys/src/ffi/: mod.rs
nvidia_sys/src/wrappers/: nvenc.h
src/: main.rs  timing_stats.rs
src/feed/: frame.rs  manager.rs  mod.rs  source.rs
src/feed/encoders/: _openh264.rs  mod.rs  openh264.rs
src/feed/encoders/nvenc/: cuda.rs  mod.rs  nvenc.rs
src/feed/encoders/openh264/: mod.rs
src/feed/sources/: mod.rs  ndi.rs
src/ffi/: ippi.rs  mod.rs
src/remote/: mod.rs  wrtc.rs
src/remote/extensions/: mod.rs  playout_delay.rs
www/: index.html
