[package]
name = "telestrator"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
enum_delegate = "0.2.0"
ffimage = "0.10.0"
ffimage_yuv = "0.10.0"
minifb = "0.25.0"
ndi = "0.1.2"
openh264 = "0.6.0"
openh264-sys2 = "0.6.0"
serde = "1.0.200"
serde_json = "1.0.116"
static_dir = "0.2.0"
tokio = { version = "1.37.0", features = ["sync", "signal"] }
warp = "0.3.7"
webrtc = "0.11.0"

[build-dependencies]
bindgen = "0.69.4"
